start trying create particles
start trying create particles

--- a/Output/Settings/imgui.ini
+++ b/Output/Settings/imgui.ini
@@ -47,36 +47,36 @@ DockId=0x00000004,1
 
 [Window][DockSpaceViewport_11111111]
 Pos=0,17
-Size=1080,703
+Size=32,32
 Collapsed=0
 
 [Window][Hierarchy]
 Pos=0,17
-Size=225,437
+Size=7,15
 Collapsed=0
 DockId=0x00000001,0
 
 [Window][Inspector]
-Pos=795,17
-Size=285,703
+Pos=17,17
+Size=15,32
 Collapsed=0
 DockId=0x00000006,0
 
 [Window][Scene]
-Pos=227,51
-Size=566,403
+Pos=9,26
+Size=6,6
 Collapsed=0
 DockId=0x0000000C,0
 
 [Window][Content Browser]
-Pos=0,456
-Size=793,264
+Pos=0,34
+Size=15,15
 Collapsed=0
 DockId=0x00000004,0
 
 [Window][Game]
-Pos=227,51
-Size=566,403
+Pos=9,26
+Size=6,6
 Collapsed=0
 DockId=0x0000000C,1
 
@@ -97,8 +97,8 @@ Collapsed=0
 DockId=0x00000007,0
 
 [Window][ ]
-Pos=227,17
-Size=566,32
+Pos=9,17
+Size=6,7
 Collapsed=0
 DockId=0x0000000A,0
 
@@ -139,7 +139,7 @@ Column 4  Weight=1.0000
 Column 5  Width=-1
 
 [Docking][Data]
-DockSpace             ID=0x8B93E3BD Window=0xA787BDB4 Pos=0,17 Size=1080,703 Split=Y
+DockSpace             ID=0x8B93E3BD Window=0xA787BDB4 Pos=0,17 Size=32,32 Split=Y
   DockNode            ID=0x00000007 Parent=0x8B93E3BD SizeRef=1080,33 Selected=0x8BFAF6E9
   DockNode            ID=0x00000008 Parent=0x8B93E3BD SizeRef=1080,668 Split=X
     DockNode          ID=0x00000005 Parent=0x00000008 SizeRef=793,703 Split=Y
@@ -149,7 +149,7 @@ DockSpace             ID=0x8B93E3BD Window=0xA787BDB4 Pos=0,17 Size=1080,703 Spl
           DockNode    ID=0x00000009 Parent=0x00000002 SizeRef=600,32 HiddenTabBar=1 Selected=0xE96CCF45
           DockNode    ID=0x0000000B Parent=0x00000002 SizeRef=600,475 Split=Y Selected=0x83199EB2
             DockNode  ID=0x0000000A Parent=0x0000000B SizeRef=634,32 HiddenTabBar=1 Selected=0xE96CCF45
-            DockNode  ID=0x0000000C Parent=0x0000000B SizeRef=634,403 CentralNode=1 Selected=0x18B8C0DE
+            DockNode  ID=0x0000000C Parent=0x0000000B SizeRef=634,403 CentralNode=1 Selected=0x83199EB2
       DockNode        ID=0x00000004 Parent=0x00000005 SizeRef=1080,264 Selected=0x371352B7
     DockNode          ID=0x00000006 Parent=0x00000008 SizeRef=285,703 Selected=0xF02CD328
 
