--- a/Ragnar Engine.vcxproj
+++ b/Ragnar Engine.vcxproj
@@ -127,6 +127,7 @@
     <ClInclude Include="Engine\Source\GameView.h" />
     <ClInclude Include="Engine\Source\glmath.h" />
     <ClInclude Include="Engine\Source\Globals.h" />
+    <ClInclude Include="Engine\Source\Gravity.h" />
     <ClInclude Include="Engine\Source\HierarchyMenu.h" />
     <ClInclude Include="Engine\Source\IndexBuffer.h" />
     <ClInclude Include="Engine\Source\InspectorMenu.h" />
@@ -156,6 +157,7 @@
     <ClInclude Include="Engine\Source\Quadtree.h" />
     <ClInclude Include="Engine\Source\Resource.h" />
     <ClInclude Include="Engine\Source\ResourceManager.h" />
+    <ClInclude Include="Engine\Source\Speed.h" />
     <ClInclude Include="Engine\Source\Texture.h" />
     <ClInclude Include="Engine\Source\TextureBuffer.h" />
     <ClInclude Include="Engine\Source\TextureImporter.h" />
@@ -193,6 +195,7 @@
     <ClCompile Include="Engine\Source\GameTimer.cpp" />
     <ClCompile Include="Engine\Source\GameView.cpp" />
     <ClCompile Include="Engine\Source\glmath.cpp" />
+    <ClCompile Include="Engine\Source\Gravity.cpp" />
     <ClCompile Include="Engine\Source\HierarchyMenu.cpp" />
     <ClCompile Include="Engine\Source\IndexBuffer.cpp" />
     <ClCompile Include="Engine\Source\InspectorMenu.cpp" />
@@ -219,6 +222,7 @@
     <ClCompile Include="Engine\Source\Primitive.cpp" />
     <ClCompile Include="Engine\Source\Quadtree.cpp" />
     <ClCompile Include="Engine\Source\ResourceManager.cpp" />
+    <ClCompile Include="Engine\Source\Speed.cpp" />
     <ClCompile Include="Engine\Source\Texture.cpp" />
     <ClCompile Include="Engine\Source\TextureBuffer.cpp" />
     <ClCompile Include="Engine\Source\TextureImporter.cpp" />
