--- a/Ragnar Engine.vcxproj.filters
+++ b/Ragnar Engine.vcxproj.filters
@@ -277,6 +277,12 @@
     <ClInclude Include="Engine\Source\ParticleEmitter.h">
       <Filter>Sources\Particles</Filter>
     </ClInclude>
+    <ClInclude Include="Engine\Source\Gravity.h">
+      <Filter>Sources\Particles</Filter>
+    </ClInclude>
+    <ClInclude Include="Engine\Source\Speed.h">
+      <Filter>Sources\Particles</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="Engine\Source\ModuleCamera3D.cpp">
@@ -457,6 +463,12 @@
       <Filter>Sources\Particles</Filter>
     </ClCompile>
     <ClCompile Include="Engine\Source\ParticleEmitter.cpp">
+      <Filter>Sources\Particles</Filter>
+    </ClCompile>
+    <ClCompile Include="Engine\Source\Gravity.cpp">
+      <Filter>Sources\Particles</Filter>
+    </ClCompile>
+    <ClCompile Include="Engine\Source\Speed.cpp">
       <Filter>Sources\Particles</Filter>
     </ClCompile>
   </ItemGroup>
